Adicionando imagens e concluindo o projeto

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
             <a class="navbar-brand" href="#">
                 <img src="img/pisswaser.png" width="180" height="80">
             </a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
+            <div class="navbar-collapse">
+                <ol class="nav navbar-nav navbar-left">
                     <li class="nav-item">
                         <a class="nav-link" href="#quemsomos">Quem somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Parceiros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Serviços</a>
+                        <a class="nav-link" href="#servicos">Serviços</a>
                     </li>
-                </ul>
+                </ol>
             </div>
         </nav>
 
@@ -36,22 +36,64 @@
 
         <section id="parceiros">
             <div class="container-fluid text-center margin parceiros">
-                <h2 class="margin-img h-text">Parceiros</h2>
+                <h2 class="margin-img h-text"><strong>Parceiros</strong></h2>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-sm-2" width="100%">
+                        <div class="col-lg-4 col-md-5 col-sm-6">
                             <img src="img/Redwood.png" class="img-parc">
+                            <p>
+                                Redwood Cigarettes are a tobacco company featured in the 3D Universe and HD Universe. 
+                                The player can buy stocks from them on the Lcn-exchange.com website in Grand Theft Auto V.
+                            </p>
+                            <p>
+                                "Tobacco products for real men who don't go to the doctors or read fear-mongering, left-wing so-called medical propaganda."
+                                ― Description at LCN.com.
+                            </p>
                         </div>
-                        <div class="col-lg-4 col-sm-2" width="100%">
-                            <img src="img/Redwood.png" class="img-parc">
+                        <div class="col-lg-4 col-md-5 col-sm-6">
+                            <img src="img/pisswaser.png" class="img-parc">
+                            <p>
+                                Pißwasser, stylized as PIßWASSER (BAWSAQ: PIS) (English: /ˈpɪsˌwɑsər/; German: /ˈpɪsˌvasəʁ/), 
+                                Anglicised as Pisswasser or Piswasser, is a fictional German export lager frequently advertised on radio 
+                                and TV in Grand Theft Auto IV and Grand Theft Auto V. The player can buy stocks from them on the Bawsaq.com website in GTA V.
+                            </p>
                         </div>
-                        <div class="col-lg-4 col-sm-2" width="100%">
-                            <img src="img/Redwood.png" class="img-parc">
+                        <div class="col-lg-4 col-md-5 col-sm-6">
+                            <img src="img/TPI.png" class="img-parc">
+                            <p>
+                                Trevor Philips Enterprises (also variously referred to as Trevor Philips Enterprise,
+                                 Trevor Philips Industries, Trevor Philips Corporation, TPI Conglomerate, TP Conglomerate, and TP Inc.)
+                                  is a business in Grand Theft Auto V and Grand Theft Auto Online run by one of the three protagonists,
+                                   Trevor Philips which is a company that deals with arms and drug dealings syndicate.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section id="servicos">
+            <div class="container-fluid text-center margin servicos">
+                <h2 class="margin-img h-text">Serviços</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <img src="img/code.jpeg" class="img-tam rounded-circle" width="100%">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-6">
+                            <img src="img/client.jpeg" class="img-tam rounded-circle" width="100%">
+                            <p>
+
+                            </p>                           
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer class="container-fluid text-center bg-footer">
+            <p>Desenvolvido por Vittorio Perotto</p>
+        </footer>
 
     </body>
 </html>
